MDEV-4439 ALTER TABLE .. [ADD|DROP] FOREIGN KEY IF [NOT] EXISTS does not work if constraint name is not used.   Patches for server and the Innodb engine.   Server is fixed so it does nothing if no indexes left to alter.   Innodb parser is fixed so it looks for the IF [NOT] EXISTS option in a string.   Another change is that it uses the index name for the internal dictionary.   Prior to that it only used the CONSTRAINT name for it.